--- a/Genesis/style.css
+++ b/Genesis/style.css
@@ -1,7 +1,12 @@
+body {
+    background: #eeeaea;
+
+}
+
 .dino {
     width: 60px;
     height: 60px;
-    background: green;
+    background-image: url(dino.png);
     position: absolute;
     bottom: 0;
 }
@@ -10,6 +15,33 @@
     position: absolute;
     width: 60px;
     height: 60px;
+    background-image: url(cactus.png);
     bottom: 0;
-    background: red;
+}
+
+.game-over {
+    text-align: center;
+    color: #666666;
+    margin-top: 58px;
+    font-family: arial;
+}
+
+@keyframes slideright {
+    from {
+        background-position: 70000%;  
+    }
+
+    to {
+        background-position: 0;
+    }
+}
+
+.background {
+    position: absolute;
+    bottom: 0;
+    background-image: url(background.png);
+    background-repeat: repeat-x;
+    animation: slideright 600s infinite linear;
+    width: 100%;
+    height: 200px;
 }
